== Groups by itthinx - changelog.txt

= 2.18.0 =
* WordPress 6.1 compatible.

= 2.17.0 =
* WordPress 6.1 compatible.
* Fixes potential errors with inconsistent postmeta values obtained for groups protecting posts, using own API method which has been further guarded against inconsistent values.
* Revised code to use updated API method to obtain read access group IDs instead of accessing via get_post_meta().
* Fixed several instances of code formatting issues.
* Improves the performance on filtering out adjacent posts with sets of eligible post IDs cached by post type and avoids redundant queries.

= 2.16.2 =
* Fixes a PHP 8.1 warning related to the passing of a null parameter to version_compare().

= 2.16.1 =
* Fixes a parse error caused by a trailing `,`.

= 2.16.0 =
* WordPress 6.0 compatible.
* Fixed slashes appearing in term-related group names in the Groups column of the administrative screens for posts.
* Updated Groups menu position to straight integer for WordPress 6.x compatibility.
* Fixed use of undefined variable in legacy code.
* Add-Ons section updated.
* Revised Groups' menu icon.

= 2.15.0 =
* WordPress 5.9 compatible.
* Revised block titles and removed redundant "Block" part.
* Updated the German translation.
* Added German formal and informal translations for Germany, Austria and Switzerland.
* Updated the Spanish translation.
* Updated the French translation.
* Updated the Indonesian translation.
* Updated partial translations.
* Added clarification on applicable post type access restrictions.
* Revised notice on supporting Groups.
* Removed the option to show legacy settings unless already enabled, or showing is enabled via the GROUPS_SHOW_LEGACY_SETTINGS constant.

= 2.14.1 =
* Removed outdated changelog section info.
* Updated Add-Ons section and removed entry for subsumed integration.

= 2.14.0 =
* WordPress 5.8 compatible.
* Minimum WordPress version 5.5 is required.