@@ -2,6 +2,8 @@
 
 = 2.18.0 =
 * WordPress 6.1 compatible.
+* Added the static exists() method to the Groups_Group class.
+* Added checks on data used to restrict posts to avoid invalid group IDs.
 
 = 2.17.0 =
 * WordPress 6.1 compatible.
